# pong-cpp

./: CMakeLists.txt
src/: ball.h  game_main.cpp  paddle.h
